--- a/gmf/src/main/webapp/swagger-ui/index.html
+++ b/gmf/src/main/webapp/swagger-ui/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>blog - Swagger UI</title>
+    <title>Guia do Mochileiro Faecano</title>
     <base href="/swagger-ui/" />
     <link rel="stylesheet" type="text/css" href="./swagger-ui.css" />
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
